Changes for 1.3.1.2
* Fixed bug in movement validation that allowed paths over impassibles and restricted territories to be taken into account for landing zones. (veqryn)

* Fixed bug in movement validation that allowed both combat and noncombat flyover of neutrals. (veqryn)

* Fixed bug in movement validation for paratroopers and mechanized infantry techs when a unit has received bonus movement from an airfield or harbour. (veqryn)

* Several small changes to Middle Earth, Big World v3 rules, and Pact of Steel 2. (veqryn)

* Fixed to allow old Mac OS X computers to connect to lobby, again. (veqryn)

* Small fix to validation of user data for lobby. (veqryn)

* Fixed bug where allied fighters on carriers were not moving with the carriers under certain situations, like when there was an transport ship in the same sea zone, or a harbour or airfield had modified their movement. (veqryn)


Changes for 1.3.1.1
* Allowing lobby to parse user data more effectively. (wisconsin & veqryn)

* Fixed major bug in low luck support attachments, where units got up to double the support they were supposed to get. (veqryn)

* Fixed Dynamix settings menu to use java 1.5 compatible coding, instead of java 1.6.  With this change, and the removal of string isEmpty calls, TripleA is once again compatible with java 1.5 and Mac OS computers. (wisconsin)

* Updated then Added "Big World : v3 Rules" game, a mod of the original Big World mostly by Prussia, to triplea. (veqryn)

* Removed String .isEmpty calls, as they are not supported under Java 1.5, also called java 5. (veqryn)

* Fixed fighters and air disappearing even if you bought a carrier, if there is another turn like china, between yours and the placement of the carrier. (veqryn) 

* Fixed paratrooper loading creating multiple copies of units. Fixed bugs for deselection of paratroopers and air. (veqryn)

* Fixed minor bugs, including units having to roll to kill unescorted transports. (veqryn)
