@@ -3759,6 +3759,10 @@
 				<property name="Neutrals Are Blitzable" value="true" editable="false">
 					<boolean/>
 				</property>
+
+				<property name="Neutral Flyover Allowed" value="false" editable="true">
+						<boolean/>
+				</property>
 				
                 
 				
