@@ -3157,6 +3157,10 @@
 				<property name="Neutrals Are Blitzable" value="false" editable="true">
 						<boolean/>
 				</property>
+
+				<property name="Neutral Flyover Allowed" value="false" editable="true">
+						<boolean/>
+				</property>
 				
 				
 				<property name="mapName" value="big_world" editable="false"/>
