@@ -208,5 +208,6 @@ public interface Constants
   public static final String CAPTURE_UNITS_ON_ENTERING_TERRITORY = "Capture Units On Entering Territory";
   public static final String DESTROY_UNITS_ON_ENTERING_TERRITORY = "On Entering Units Destroyed Instead Of Captured";
   public static final String DAMAGE_FROM_BOMBING_DONE_TO_UNITS_INSTEAD_OF_TERRITORIES = "Damage From Bombing Done To Units Instead Of Territories";
+  public static final String NEUTRAL_FLYOVER_ALLOWED = "Neutral Flyover Allowed";
   
 }
