@@ -1,4 +1,6 @@
 Changes for 1.3.1.2
+* Added new game property, "Neutral Flyover Allowed", which like it says, will allow you to fly over neutrals. (veqryn)
+
 * Fixed bug in movement validation that allowed paths over impassibles and restricted territories to be taken into account for landing zones. (veqryn)
 
 * Fixed bug in movement validation that allowed both combat and noncombat flyover of neutrals. (veqryn)
